objects/LLC_BI__Profitability__c.object
<CustomObject>
    <description>This object enables a financial institution to store profitability data. This object is one-to-one and the system can only populate one lookup field at a time.</description>
    <fields>
        <fullName>LLC_BI__Additional_Risk_Adjusted_Income__c</fullName>
        <description>Users populate this field with any additional wealth, insurance, or other net income not captured in existing loan, treasury, or deposit inputs. By default, it is blank.</description>
        <label>Additional Risk Adjusted Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Affected_Profitability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup field that connects a Proforma Profitability to the Actual Profitability record of an account or household.</description>
        <label>Affected Profitability</label>
        <referenceTo>LLC_BI__Profitability__c</referenceTo>
        <relationshipLabel>Profitabilities (Affected Profitability)</relationshipLabel>
        <relationshipName>Profitabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Assets_for_Deposits__c</fullName>
        <description>Users manually populate this field to represent the Average Liabilities for Deposits for all deposit products.</description>
        <label>Average Liabilities for Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Assets_for_Loans__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of all Average Assets for Loans for loan products associated to it.</description>
        <label>Average Assets for Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Assets_for_Treasury__c</fullName>
        <description>Users manually populate this field to represent the Average Assets for Treasury for all treasury services.</description>
        <label>Average Assets for Treasury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Earning_Assets__c</fullName>
        <description>This field is automatically populated and represents the Average Earning Assets that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>Average Earning Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capital_Allocated_for_Deposits__c</fullName>
        <description>Users manually populate this field to represent the Capital Allocated for Deposits for all deposit products.</description>
        <label>Capital Allocated for Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capital_Allocated_for_Loans__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of all Capital Allocated for Loans based on loan products associated to it.</description>
        <label>Capital Allocated for Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capital_Allocated_for_Treasury__c</fullName>
        <description>Users manually populate this field to represent the Capital Allocated for  Treasury for all treasury services.</description>
        <label>Capital Allocated for Treasury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Deposit_Capital__c</fullName>
        <description>Users manually populate this field to represent the Cost of Deposit Capital for all deposit products.</description>
        <label>Cost of Deposit Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Loan_Capital__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of all Cost of Loan Capital fields on loan products associated to it.</description>
        <label>Cost of Loan Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Treasury_Capital__c</fullName>
        <description>Users manually populate this field to represent the Cost of Treasury Capital for all treasury services.</description>
        <label>Cost of Treasury Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_EVA__c</fullName>
        <description>The system populates this field to represent the Economic Value Added for deposit products. By default, it is blank.</description>
        <label>Deposit EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Expense__c</fullName>
        <description>The system populates the total calculated revenue for deposit products. By default, it is blank.</description>
        <label>Deposit Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Operating_Cost__c</fullName>
        <description>The system populates this text field with the total Operating Cost for deposit products. By default, it is blank.</description>
        <label>Deposit Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Revenue__c</fullName>
        <description>The system populates this field with the total calculated revenue for deposit products. By default, it is blank.</description>
        <label>Deposit Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EVA_Currency__c</fullName>
        <description>This field is automatically populated and represents the Economic Value Added that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EVA_Proforma__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by loan product(s) and is a projection of the EVA of a relationship if this loan closes and is funded.</description>
        <label>Proforma EVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Error_Message__c</fullName>
        <description>The system populates this field with the most recent error message for a context object&apos;s pricing or profitability execution if an execution fails, and clears it upon a subsequent successful calculation. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Loss__c</fullName>
        <description>The total projected life of loan expected loss applied in nIQ Profitability calculations.</description>
        <label>Expected Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Income__c</fullName>
        <description>The Fee Income applied in nIQ Profitability Calculations.</description>
        <label>Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Forecasted_Profitability__c</fullName>
        <description>Reserved for future use. The system populates this field to indicate the Proforma Profitability when it was most recently calculated.</description>
        <label>Forecasted Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Forecasted_ROE__c</fullName>
        <description>Reserved for future use. The system populates this field to indicate the Proforma ROE when it was most recently calculated.</description>
        <label>Forecasted ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funds_Transfer_Pricing__c</fullName>
        <description>This field is automatically populated and represents the Funds Transfer Pricing value that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>Funds Transfer Pricing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hurdle_Rate__c</fullName>
        <description>The system automatically populates this optional field with the matrix-derived hurdle rate result associated to the record it was triggered from.</description>
        <label>Hurdle Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Impact_EVA__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan EVA impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>EVA Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Impact_NOPAT__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan NOPAT impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>NOPAT Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Impact_SVA__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan SVA impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>SVA Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Income__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Interest Income of all loan products associated to it.</description>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Refresh_Date__c</fullName>
        <description>This field displays the last refresh date and time values.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Liquidity_Cost__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Liquidity Cost of all loan products associated to it.</description>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NIM_Impact__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan NIM percent impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>NIM Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NIM__c</fullName>
        <description>This field is automatically populated and represents the Net Interest Margin that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>NIM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NOPAT_Currency__c</fullName>
        <description>This field is automatically populated and represents the Net Operating Profit After Tax that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>NOPAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NOPAT_Proforma__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by loan product(s) and is a projection of the NOPAT of a relationship if this loan closes and is funded.</description>
        <label>Proforma NOPAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NPV_Impact__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan NPV impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>NPV Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NPV__c</fullName>
        <description>This field is automatically populated and represents the Net Present Value of Risk Adjusted Cashflows that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Deposit_Income__c</fullName>
        <description>Users manually populate this field to represent the income generated by deposit products.</description>
        <label>Net Deposit Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Interest_Income__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Net Income of all loan products associated to it.</description>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Treasury_Income__c</fullName>
        <description>Users manually populate this field to represent the income generated by treasury services.</description>
        <label>Net Treasury Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_CET1__c</fullName>
        <description>This field is automatically populated and represents the Non-CET1 value that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>Non - CET1 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Risk_Adjusted_Capital_Allocation__c</fullName>
        <description>This field is automatically populated and represents the Non-Risk Adjusted Capital Allocation that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>Non-Risk Adjusted Capital Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operating_Cost__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Operating Cost of all loan products associated to it.</description>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operating_Deposit_Income__c</fullName>
        <description>Users manually populate this field to represent the Operating Income generated by deposit products.</description>
        <label>Operating Deposit Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operating_Loan_Income__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of all Operating Loan Income of loan products associated to it.</description>
        <label>Operating Loan Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operating_Treasury_Income__c</fullName>
        <description>Users populate this field to represent the Operating Income from treasury services.</description>
        <label>Operating Treasury Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_FTP__c</fullName>
        <description>The Original FTP percentage use during origination.</description>
        <label>Original FTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Pricing Option</label>
        <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Profitability_Impact__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan Profitability on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>Profitability Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Profitability__c</fullName>
        <description>Reserved for future use. The fiscal amount of profit in denomination that a specific account provides a financial institution.</description>
        <label>Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_NIM__c</fullName>
        <description>This field represents the overall Relationship NIM if the scenario is selected or the loan moves to a status the financial institution considers closed.</description>
        <label>Proforma NIM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_NPV__c</fullName>
        <description>This field represents the overall Relationship NPV if the scenario is selected or the loan moves to a status the financial institution considers closed.</description>
        <label>Proforma NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_Profitability__c</fullName>
        <description>This field represents the overall Relationship Profitability if the scenario is selected or the loan moves to a status the financial institution considers closed.</description>
        <label>Proforma Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_RAA__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by a loan product and is a projection of the RAA of a relationship if this loan closes and is funded.</description>
        <label>Proforma RAA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_RAROC__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by a loan product and is a projection of the RAROC of a relationship if this loan closes and is funded.</description>
        <label>Proforma RAROC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_ROA__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by a loan product and is a projection of the ROA of a relationship if this loan closes and is funded.</description>
        <label>Proforma ROA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_ROE__c</fullName>
        <description>This field represents the overall Relationship ROE if the scenario is selected or the loan moves to a status the financial institution considers closed.</description>
        <label>Proforma ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proforma_RORAC__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by a loan product and is a projection of the RORAC of a relationship if this loan closes and is funded.</description>
        <label>Proforma RORAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RAA_Impact__c</fullName>
        <description>The system autopopulates this field to represent the scenario or loan RAA percent impact on the overall relationship profitability if it moves to a stage considered closed.</description>
        <label>RAA Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RAA__c</fullName>
        <description>This field is automatically populated and represents the Return on Average Assets that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>RAA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RAROC_Impact__c</fullName>
        <description>The system autopopulates this field to represent the scenario or loan RAROC percent impact on the overall relationship profitability if it moves to a stage considered closed.</description>
        <label>RAROC Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RAROC__c</fullName>
        <description>This field is automatically populated and represents the Risk Adjusted Return on Capital that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>RAROC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RA_Net_Deposit_Income__c</fullName>
        <description>Users manually populate this field to represent the Risk Adjusted Net Income field generated by deposit products.</description>
        <label>Risk Adjusted Net Deposit Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RA_Net_Interest_Income__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Risk Adjusted Net Income of all loan products associated to it.</description>
        <label>Risk Adjusted Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RA_Net_Treasury_Income__c</fullName>
        <description>Users manually populate this field to represent the Risk Adjusted Net Income field generated by treasury services.</description>
        <label>Risk Adjusted Net Treasury Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROA_Impact__c</fullName>
        <description>The system autopopulates this field to represent the scenario or loan ROA percent impact on the overall relationship profitability if it moves to a stage considered closed.</description>
        <label>ROA Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROA__c</fullName>
        <description>This field is automatically populated and represents the Return on Assets that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>ROA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROE_Impact__c</fullName>
        <description>This field is automatically populated and represents the Scenario or Loan ROE percent impact on the overall Relationship profitability if it moves to a status the financial institution considers closed.</description>
        <label>ROE Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROE__c</fullName>
        <description>This field is automatically populated. The fiscal amount of profit in percentage that a specific account provides a financial institution.</description>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RORAC_Impact__c</fullName>
        <description>The system autopopulates this field to represent the scenario or loan RORAC percent impact on the overall relationship profitability if it moves to a stage considered closed.</description>
        <label>RORAC Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RORAC__c</fullName>
        <description>The system autopopulates this field to represent the Return on Risk Adjusted Capital that a scenario, loan, deal, or relationship associated to the profitability will generate.</description>
        <label>RORAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_Cost_of_Capital__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. In the context of a relationship, this field is an aggregated value of the Regulatory Cost of Capital of all loan products associated to it.</description>
        <label>Regulatory Cost of Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the object that the profitability record is viewed from. It is populated with an internal Salesforce ID.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Profitabilities</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SVA_Currency__c</fullName>
        <description>This field is automatically populated and represents the Shareholder Value Added that a Scenario, Loan, Deal or Relationship associated to the profitability will generate.</description>
        <label>SVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SVA_Proforma__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan. This field represents the potential income generated by loan product(s) and is a projection of the SVA of a relationship if this loan closes and is funded.</description>
        <label>Proforma SVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Profitability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup field that connects a Proforma Profitability to the Actual Profitability record of a singular product.</description>
        <label>Source Profitability</label>
        <referenceTo>LLC_BI__Profitability__c</referenceTo>
        <relationshipLabel>Profitabilities (Source Profitability)</relationshipLabel>
        <relationshipName>Profitabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Rate__c</fullName>
        <description>The corporate tax rate applied in nIQ Profitability calculations.</description>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Taxes__c</fullName>
        <description>The system autopopulates this field using the profitability model in the context of a loan to define that product&apos;s tax rate.</description>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Assets_for_Deposits__c</fullName>
        <description>Users manually populate this field to represent the Total Liabilities for Deposits for all deposit products.</description>
        <label>Total Liabilities for Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>